--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -138,7 +138,7 @@
 		.prop-title {
 			@include hsmedium($hFontMI);
 		}
-		.prop-price, .bottom-info, .prop-details,.prop-location,.price,.currency, .sqft-details {
+		.prop-price, .bottom-info, .prop-details,.prop-location,.price,.currency,.ownership, .sqft-details {
 			@include hsmall($hFontM);
 		}
 		.sqft-details {
@@ -147,7 +147,7 @@
 				margin-left: 3px;
 			}
 		}
-		.price,.currency {
+		.price,.currency, .ownership {
 			display: inline-block;
 		}
 		.bottom-info {
