--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -191,6 +191,8 @@
 
 							<li>Bedrooms</li>
 
+							<li>Bathrooms</li>
+
 							{{ if powder|not_empty }}
 							<li>Powder Rooms</li>
 							{{ endif }}
