--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -10,7 +10,7 @@
 				<span class="prop-title">{{ title }}</span>
 				<div class="spacer"></div>
 				<span class="prop-price">
-				{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}
+				{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if ownership == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}
 				</span>
 				<div class="spacer"></div>
 				<span class="prop-details">{{ property_type }}</span>
