--- a/src/scss/components/_property_nav.scss
+++ b/src/scss/components/_property_nav.scss
@@ -109,7 +109,7 @@
 		}
 	}
 	.rent-or-buy {
-		padding: 8px 4px;
+		padding: 8px;
 		background-color: black;
 		vertical-align: top;
 		display: inline-block;
