--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3729,7 +3729,7 @@ footer .footer-divider {
   background-color: #009880; }
 
 .property_nav .rent-or-buy {
-  padding: 8px 4px;
+  padding: 8px;
   background-color: black;
   vertical-align: top;
   display: inline-block; }
