--- a/src/scss/components/_property_nav.scss
+++ b/src/scss/components/_property_nav.scss
@@ -110,6 +110,9 @@
 	}
 	.rent-or-buy {
 		padding: 8px 4px;
+		#buy {
+			margin-right: 4px;
+		}
 		background-color: black;
 		vertical-align: top;
 		display: inline-block;
