--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -95,12 +95,12 @@
 {{ else }}
 <div class="property_nav dark_gray leading properties_grid">
 	<div class="container">
-		<div class="rent-or-buy">
+<!-- 		<div class="rent-or-buy">
 			<ul>
 				<li><a id="buy" class="active">Buy</a></li>
 				<li><a id="rent"> Rent</a></li>
 			</ul>
-		</div>
+		</div> -->
     <div class='view-type'>
       <ul class='views'>
         <li>
@@ -121,40 +121,26 @@
 
 function initialize() {
   var sale_properties = [
-  {{ entries:listing folder="properties/new-york/sale"}}
-  [
-  '{{ title }}', 
-  {{ location }}
-  {{ latitude}},
-  {{ longitude }}{{/location}},
-  '{{url}}',
-  '{{ preview_image }}',
-  '../_themes/main/img/map_marker_green.svg',
-  '{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}',
-  '{{ property_type }}',
-  '{{ sqft|format_number }} ft',
-  '{{ property_location }}'
-  ],
+  {{ entries:listing folder="properties/new-york/sale|properties/new-york/rental"}}
+  {{ if last }}
+  ['{{ title }}', {{ location }}{{ latitude}},{{ longitude }}{{/location}},'{{url}}','{{ preview_image }}','../_themes/main/img/map_marker_green.svg',
+  '{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}','{{ property_type }}','{{ sqft|format_number }} ft','{{ property_location }}']
+  {{ else }}
+  ['{{ title }}', {{ location }}{{ latitude}},{{ longitude }}{{/location}},'{{url}}','{{ preview_image }}','../_themes/main/img/map_marker_green.svg','{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}','{{ property_type }}','{{ sqft|format_number }} ft','{{ property_location }}'],
+  {{ endif }}
   {{ /entries:listing }}
   ];
 
-  var rental_properties = [
-  {{ entries:listing folder="properties/new-york/rental"}}
-  [
-  '{{ title }} {{ if apartment }}{{ apartment }}{{ endif }}', 
-  {{ location }}
-  {{ latitude}},
-  {{ longitude }}{{/location}},
-  '{{url}}',
-  '{{ preview_image }}',
-  '../_themes/main/img/map_marker_green.svg',
-  '{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if ownership == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}',
-  '{{ property_type }}',
-  '{{ sqft|format_number }} ft',
-  '{{ property_location }}'
-  ],
-  {{ /entries:listing }}
-  ];
+  // var rental_properties = [
+  // {{ entries:listing folder="properties/new-york/rental"}}
+  // {{ if last }}
+  // ['{{ title }}', {{ location }}{{ latitude}},{{ longitude }}{{/location}},'{{url}}','{{ preview_image }}','../_themes/main/img/map_marker_green.svg',
+  // '{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}','{{ property_type }}','{{ sqft|format_number }} ft','{{ property_location }}']
+  // {{ else }}
+  // ['{{ title }}', {{ location }}{{ latitude}},{{ longitude }}{{/location}},'{{url}}','{{ preview_image }}','../_themes/main/img/map_marker_green.svg','{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}','{{ property_type }}','{{ sqft|format_number }} ft','{{ property_location }}'],
+  // {{ endif }}
+  // {{ /entries:listing }}
+  // ];
 
   window.map = new google.maps.Map(document.getElementById('map'), {
     mapTypeId: google.maps.MapTypeId.ROADMAP,
@@ -231,109 +217,109 @@ function initialize() {
     });
   }
 
-  for (i = 0; i < rental_properties.length; i++) {
+  // for (i = 0; i < rental_properties.length; i++) {
 
-    var title = rental_properties[i][0];
-    var lat = rental_properties[i][1];
-    var long = rental_properties[i][2];
-    var url = rental_properties[i][3];
-    var image = rental_properties[i][4];
-    var icon = rental_properties[i][5];
-    var price = rental_properties[i][6];
-    var type = rental_properties[i][7];
-    var size = rental_properties[i][8];
-    var location = rental_properties[i][9];
+  //   var title = rental_properties[i][0];
+  //   var lat = rental_properties[i][1];
+  //   var long = rental_properties[i][2];
+  //   var url = rental_properties[i][3];
+  //   var image = rental_properties[i][4];
+  //   var icon = rental_properties[i][5];
+  //   var price = rental_properties[i][6];
+  //   var type = rental_properties[i][7];
+  //   var size = rental_properties[i][8];
+  //   var location = rental_properties[i][9];
 
-    infoWindows.push(infowindow);
-    rentalMarkers.push(marker);
+  //   infoWindows.push(infowindow);
+  //   rentalMarkers.push(marker);
 
-    marker = new google.maps.Marker({
-      position: new google.maps.LatLng(rental_properties[i][1], rental_properties[i][2]),
-      map: map,
-      icon: rental_properties[i][5],
-      visible: false
-    });
+  //   marker = new google.maps.Marker({
+  //     position: new google.maps.LatLng(rental_properties[i][1], rental_properties[i][2]),
+  //     map: map,
+  //     icon: rental_properties[i][5],
+  //     visible: false
+  //   });
 
-    bounds.extend(marker.position);
+  //   bounds.extend(marker.position);
 
-    google.maps.event.addListener(marker, 'click', (function (marker, i) {
-      return function () {
-        infowindow.setContent(
-        '<a href=' + '"' + rental_properties[i][3] + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
-          '<div class="image-wrap">' +
-            '<div class="preview-image" style=' + '"background-image: url(' + rental_properties[i][4] + '">' + 
-            '</div>' +
-          '</div>' +
+  //   google.maps.event.addListener(marker, 'click', (function (marker, i) {
+  //     return function () {
+  //       infowindow.setContent(
+  //       '<a href=' + '"' + rental_properties[i][3] + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
+  //         '<div class="image-wrap">' +
+  //           '<div class="preview-image" style=' + '"background-image: url(' + rental_properties[i][4] + '">' + 
+  //           '</div>' +
+  //         '</div>' +
           
-          '<div class=' + '"' + 'property_tile_info' + '"' + '>' +
-            '<div class=' + '"' + 'top-info' + '"' + '>' +
-              '<span class=' + '"' + 'prop-title' + '"' + '>' + rental_properties[i][0] + '</span>' +
-              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-              '<span class=' + '"' + 'prop-price' + '"' + '>' + rental_properties[i][6] + '</span>' +
-              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-              '<span class=' + '"' + 'prop-details' + '"' + '>' + rental_properties[i][7] + '</span>' +
-              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-              '<span class=' + '"' + 'prop-details' + '"' + '>' + rental_properties[i][8] + '<sup>2</sup>' + '</span>' +
-              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-              '<span class=' + '"' + 'prop-location' + '"' + '>' + rental_properties[i][9] + '</span>' +
-            '</div>' +
-            '<div class=' + '"' + 'bottom-info' + '"' + '>' +
-            '</div>' +
-          '</div>' +
-        '</a>');
-        infowindow.open(map, marker);
-      }
-    })(marker, i));
+  //         '<div class=' + '"' + 'property_tile_info' + '"' + '>' +
+  //           '<div class=' + '"' + 'top-info' + '"' + '>' +
+  //             '<span class=' + '"' + 'prop-title' + '"' + '>' + rental_properties[i][0] + '</span>' +
+  //             '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+  //             '<span class=' + '"' + 'prop-price' + '"' + '>' + rental_properties[i][6] + '</span>' +
+  //             '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+  //             '<span class=' + '"' + 'prop-details' + '"' + '>' + rental_properties[i][7] + '</span>' +
+  //             '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+  //             '<span class=' + '"' + 'prop-details' + '"' + '>' + rental_properties[i][8] + '<sup>2</sup>' + '</span>' +
+  //             '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+  //             '<span class=' + '"' + 'prop-location' + '"' + '>' + rental_properties[i][9] + '</span>' +
+  //           '</div>' +
+  //           '<div class=' + '"' + 'bottom-info' + '"' + '>' +
+  //           '</div>' +
+  //         '</div>' +
+  //       '</a>');
+  //       infowindow.open(map, marker);
+  //     }
+  //   })(marker, i));
 
-    google.maps.event.addListener(map, "click", function(event) {
-        for (var i = 0; i < infoWindows.length; i++ ) {
-             infoWindows[i].close();
-        }
-    });
-  }
+  //   google.maps.event.addListener(map, "click", function(event) {
+  //       for (var i = 0; i < infoWindows.length; i++ ) {
+  //            infoWindows[i].close();
+  //       }
+  //   });
+  // }
 
-  buy.click(function() {
-    if ($(this).hasClass('active')) {
+  // buy.click(function() {
+  //   if ($(this).hasClass('active')) {
 
-    }
-    else {
-      $(this).addClass('active');
-      rent.removeClass('active');
-    }
-      for (var i = 0; i < saleMarkers.length; i++ ) {
-           saleMarkers[i].setVisible(true);
-      }
-      for (var i = 0; i < rentalMarkers.length; i++ ) {
-           rentalMarkers[i].setVisible(false);
-      }
-      for (var i = 0; i < infoWindows.length; i++ ) {
-           infoWindows[i].close();
-      }
+  //   }
+  //   else {
+  //     $(this).addClass('active');
+  //     rent.removeClass('active');
+  //   }
+  //     for (var i = 0; i < saleMarkers.length; i++ ) {
+  //          saleMarkers[i].setVisible(true);
+  //     }
+  //     for (var i = 0; i < rentalMarkers.length; i++ ) {
+  //          rentalMarkers[i].setVisible(false);
+  //     }
+  //     for (var i = 0; i < infoWindows.length; i++ ) {
+  //          infoWindows[i].close();
+  //     }
 
-  });
-  rent.click(function() {
-    if ($(this).hasClass('active')) {
+  // });
+  // rent.click(function() {
+  //   if ($(this).hasClass('active')) {
 
-    }
-    else {
-      $(this).addClass('active');
-      buy.removeClass('active');
-    }
-      for (var i = 0; i < rentalMarkers.length; i++ ) {
-           rentalMarkers[i].setVisible(true);
-      }
-      for (var i = 0; i < saleMarkers.length; i++ ) {
-           saleMarkers[i].setVisible(false);
-      }
-      for (var i = 0; i < infoWindows.length; i++ ) {
-           infoWindows[i].close();
-      }
-  });
+  //   }
+  //   else {
+  //     $(this).addClass('active');
+  //     buy.removeClass('active');
+  //   }
+  //     for (var i = 0; i < rentalMarkers.length; i++ ) {
+  //          rentalMarkers[i].setVisible(true);
+  //     }
+  //     for (var i = 0; i < saleMarkers.length; i++ ) {
+  //          saleMarkers[i].setVisible(false);
+  //     }
+  //     for (var i = 0; i < infoWindows.length; i++ ) {
+  //          infoWindows[i].close();
+  //     }
+  // });
 
   map.fitBounds(bounds);
 
   var listener = google.maps.event.addListener(map, "idle", function () {
-    map.setZoom(13);
+    // map.setZoom(13);
     google.maps.event.removeListener(listener);
   });
 
