--- a/statamic/_themes/main/layouts/default.html
+++ b/statamic/_themes/main/layouts/default.html
@@ -54,28 +54,29 @@
     </div>
     {{ theme:partial src="footer" }}
 
+  <!-- build:js -->
+  <script src="{{ theme:js src="main.min" }}"></script>
+  <script type="text/javascript">
 
-<script src="{{ theme:js src="main.min"}}"></script>
-
-<script type="text/javascript">
   window.onload = function(){
     var elements = document.getElementsByClassName("price-descriptor");
     for (var i=0; i<elements.length; i++){
       elements[i].innerHTML = elements[i].innerHTML.replace(/\\b([a-z])([a-z]+)?\\b/gim, "<span class='first-letter'>1</span>$2");
     }
   }
-</script>
-<script>
-  function pinIt()
-  {
-    var e = document.createElement('script');
-    e.setAttribute('type','text/javascript');
-    e.setAttribute('charset','UTF-8');
-    e.setAttribute('src','https://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);
-    document.body.appendChild(e);
-  }
-</script>
 
+
+  </script>
+<script>
+function pinIt()
+{
+  var e = document.createElement('script');
+  e.setAttribute('type','text/javascript');
+  e.setAttribute('charset','UTF-8');
+  e.setAttribute('src','https://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);
+  document.body.appendChild(e);
+}
+</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -86,5 +87,6 @@
   ga('send', 'pageview');
 
 </script>
+  <!-- endbuild -->
 </body>
 </html>
