--- a/statamic/_themes/main/templates/faq.html
+++ b/statamic/_themes/main/templates/faq.html
@@ -8,7 +8,7 @@
 		<main>
 
 			<div class="costs">
-				<h2>Closing Costs For Sellers*</h2>
+				<h2>Closing Costs For Sellers</h2>
 				{{ faq_items }}
 				{{ if type == "seller_set" }}
 				<div class="cost-block">
