--- a/statamic/_themes/main/templates/agent_individual.html
+++ b/statamic/_themes/main/templates/agent_individual.html
@@ -39,7 +39,7 @@
 			{{ else }}
 			{{ endif }}
 
-			{{ entries:listing folder="properties/new-york/sale|properties/new-york/rental|properties/international/sale|properties/international/rental" conditions="agents:{url}, streeteasy_status:active||in-contract" show_future="true" }}
+			{{ entries:listing folder="properties/new-york/sale|properties/new-york/rental|properties/international/sale|properties/international/rental" conditions="agents:{url}, streeteasy_status:!sold" show_future="true" }}
 			{{ if no_results }}
 			{{ else }}
 			{{ if first }}
