--- a/src/scss/components/_by_the_numbers.scss
+++ b/src/scss/components/_by_the_numbers.scss
@@ -36,7 +36,10 @@
 		width: 100%;
 	}
 	.full {
-		padding: 0 $bPadding/2;
+		padding: 0 30px;
+		@include breakpoint($small) {
+			padding: 0 120px;
+		}
 		@include breakpoint($medium) {
 			padding: 0 $bPadding;
 			.divider {
