--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -40,7 +40,7 @@ footer {
 					max-width: 100%;
 				}
 		}
-		@include breakpoint($small) {
+		@include breakpoint($medium) {
 			@include span(4 of 12 no-gutter clear);
 		}
 		@include breakpoint($large) {
