--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -37,7 +37,7 @@
 
 		<div class="footer-group affiliate">
 			<div>Exclusive Affiliate of</div>
-			<a class="beauchamp" target="_blank" href="http://www.beauchamp.co.uk/en/">{{ theme:partial src="svg/beauchamp_footer" }}</a>
+			<a class="beauchamp" target="_blank" href="http://www.beauchamp.co.uk/en/"><img src="{{ theme:img src="beauchamp_footer.png" }}"></a>
 		</div>
 
 	</div>
