--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -10,8 +10,8 @@
 		}
 	}
 	aside {
-		
-		@include breakpoint($medium) {
+		padding-right: 15px;
+		@include breakpoint($large) {
 			padding-right: $bPadding;
 		}
 		img {
