--- a/src/scss/modules/_featured_post.scss
+++ b/src/scss/modules/_featured_post.scss
@@ -18,7 +18,7 @@
 	h3 {
 		margin-bottom: .5em;
 		@include hlarge;
-		@include breakpoint($large) {
+		@include breakpoint($small) {
 			@include hxlarge($hFontMI);
 		}
 	}
@@ -26,6 +26,11 @@
 		display: none;
 		@include breakpoint($small) {
 			display: block;
+		}
+	}
+	@include breakpoint($small) {
+		.featured-image {
+			height: 300px;
 		}
 	}
 	@include breakpoint($medium) {
