--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -37,19 +37,22 @@
 		<h2>Register</h2>
 		<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=3662d5b781" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-		  <div class="form-group half">
-		    <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name">
-		  </div>
-		  <div class="form-group half">
-		    <input type="text" value="" name="LNAME" class="" id="mce-LNAME" placeholder="Last Name">
-		  </div>
-		  <div class="form-group full-span">
-		    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
-		  </div>
-		  <div style="position: absolute; left: -5000px;"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
-		  <input type="submit"  name="subscribe" id="mc-embedded-subscribe" class="btn btn-garfield submit">
-		  Subscribe
-		  </input>
+<div style="position: relative">
+	<div class="form-group half">
+	  <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name">
+	</div>
+	<div class="form-group half">
+	  <input type="text" value="" name="LNAME" class="" id="mce-LNAME" placeholder="Last Name">
+	</div>
+	<div class="form-group full-span">
+	  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
+	</div>
+	<div style="position: absolute; left: -5000px;"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
+	<div class="form-group half-span-center">
+		<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="btn btn-garfield submit">
+	</div>
+</div>
+		  <div></div>
         <div id="mce-responses" class="clear">
           <div class="response" id="mce-error-response" style="display:none"></div>
           <div class="response" id="mce-success-response" style="display:none"></div>
